--- a/webgis contour map.html
+++ b/webgis contour map.html
@@ -70,19 +70,18 @@
 <body>
     <div><canvas id="mycanvas" style="display: none;"></canvas></div>
     <div id="map"></div>
-    <!-- <div>
-        <input type="button" id="act1" value="WELCOME" onclick="msg('你好，欢迎使用！')" />
-    </div> -->
+
+    <!-- <div><input type="button" id="act1" value="WELCOME" onclick="test()" /></div> -->
+
     <img src="contourmap/icon2/设置2.png" width="50px" onclick="showHide('showsetting')"
         style="position: fixed; left:90px; bottom:10px;">
+
     <div id="showsetting" style="display: none;">
         <button onclick="showHide('showsetting')" style="position: absolute; top: 1px; right: 1px;">X</button>
         <p>绘图设置 等值线图</p>
         <p>
-            <!-- <input type="file" value="" onchange="impexcel(this)"
-                accept=".xlsx" /> -->
-                <input type="file" id="selectdatafile" accept=".xlsx" onchange="impexcel(this)" style="display: none"/>
-                <input type="button" onclick="document.getElementById('selectdatafile').click()" value="选择散点数据" class="navbar-button"/>
+            <input type="file" id="selectdatafile" accept=".xlsx" onchange="impexcel(this)" style="display: none"/>
+            <input type="button" onclick="document.getElementById('selectdatafile').click()" value="选择散点数据" class="navbar-button"/>
         </p>
         <p>计划带数: <input type="text" id="TargetN" value="10" style="height: 25px; width: 82px;"></p>
         <p>图层透明: <input type="text" id="opacity" value="0.5" style="height: 25px; width: 82px;"></p>
@@ -98,10 +97,14 @@
             <input type="button" onclick="document.getElementById('kmlFileInput').click()" value="Import kml" class="navbar-button"/>
             <input type="file" id="jsonFileInput" accept=".json, .geojson" style="display: none"/>
             <input type="button" onclick="document.getElementById('jsonFileInput').click()" value="Import GeoJSON" class="navbar-button"/>
+            <input type="text"  id="rigon" value="大连市" placeholder="输入行政区名称"class="navbar-inputtext">
+            <button class="navbar-button" onclick="drawrigon()">生成行政区边界</button>
         </div>
     </div>
+
     <img src="contourmap/icon2/绘制3.png" width="50px" onclick="showHide('showtools')"
         style="position: fixed; left:150px; bottom:10px;">
+
     <div id="showtools" style="display: none;">
         <p><button onclick="showHide('showtools')" style="position: absolute; top: 1px; right: 1px;">X</button></p>
         <!-- <p><input type="checkbox" checked onclick="setCollisionDetection(this.checked)"> Collision detection</p> -->
@@ -145,6 +148,20 @@
             var legend;
             var countourmap;
 
+            function drawrigon(){
+                var address=$("#rigon").val();
+                var linkurl="https://restapi.amap.com/v3/config/district?key=2b2bb467194aa9e72e495eafa99bb0c4&keywords="+address+"&subdistrict=0&extensions=base"
+                $.getJSON(linkurl, function (json2) {                    
+                    adcode=json2.districts[0].adcode;
+                    console.log(address,adcode);
+                    var state = "https://geo.datav.aliyun.com/areas_v2/bound/geojson?code="+adcode;
+                    $.getJSON(state, function (json) {
+                        var stateshp=L.geoJson(json).addTo(map);
+                        map.fitBounds(stateshp.getBounds());
+                    });
+                });
+                showHide('showsetting')
+            };
 
             kmlFileInput.onchange = function(event) {  
                 var kmlFileInput = document.getElementById("kmlFileInput"); 
