--- a/webgis contour map.html
+++ b/webgis contour map.html
@@ -70,7 +70,6 @@
 <body>
     <div><canvas id="mycanvas" style="display: none;"></canvas></div>
     <div id="map"></div>
-
     <!-- <div><input type="button" id="act1" value="WELCOME" onclick="test()" /></div> -->
 
     <img src="contourmap/icon2/设置2.png" width="50px" onclick="showHide('showsetting')"
@@ -78,7 +77,7 @@
 
     <div id="showsetting" style="display: none;">
         <button onclick="showHide('showsetting')" style="position: absolute; top: 1px; right: 1px;">X</button>
-        <p>绘图设置 等值线图</p>
+        <p>等值线图 绘图设置</p>
         <p>
             <input type="file" id="selectdatafile" accept=".xlsx" onchange="impexcel(this)" style="display: none"/>
             <input type="button" onclick="document.getElementById('selectdatafile').click()" value="选择散点数据" class="navbar-button"/>
@@ -91,7 +90,7 @@
             <option value="jet">jet</option>
             <option value="cool">cool</option>
         </select>
-        <p>导入矢量 图层设置</p>
+        <p>矢量图层 导入设置</p>
         <div id="sidebarBody" class="sidebar-body">
             <input type="file" id="kmlFileInput" accept=".kml" style="display: none"/>
             <input type="button" onclick="document.getElementById('kmlFileInput').click()" value="Import kml" class="navbar-button"/>
